fix: attempt to fix Dockerfile front build (#5020)

--- a/packages/twenty-front/package.json
+++ b/packages/twenty-front/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "npx nx exec -- vite build && sh ./scripts/inject-runtime-env.sh",
+    "build": "npx vite build && sh ./scripts/inject-runtime-env.sh",
     "build:sourcemaps": "VITE_BUILD_SOURCEMAP=true NODE_OPTIONS=--max-old-space-size=3000 npx nx build",
-    "start:prod": "NODE_ENV=production npx nx exec -- vite --host",
-    "storybook:build": "npx nx exec -- storybook build",
-    "tsup": "npx nx exec -- tsup"
+    "start:prod": "NODE_ENV=production npx vite --host",
+    "storybook:build": "npx storybook build",
+    "tsup": "npx tsup"
   },
   "engines": {
     "node": "^18.17.1",
