--- a/packages/twenty-chrome-extension/tsconfig.app.json
+++ b/packages/twenty-chrome-extension/tsconfig.app.json
@@ -8,7 +8,7 @@
     "**/*.test.ts",
     "**/*.spec.tsx",
     "**/*.test.tsx",
-    "jest.config.ts",
+    "jest.config.ts"
   ],
   "include": ["**/*.js", "**/*.jsx", "**/*.ts", "**/*.tsx"]
 }
