fix: fix root start script (#5032)
Fixes #5022

See https://nx.dev/recipes/running-tasks/root-level-scripts#setup

--- a/.github/workflows/ci-chromatic.yaml
+++ b/.github/workflows/ci-chromatic.yaml
@@ -41,4 +41,4 @@ jobs:
       - name: Publish to Chromatic
         run: |
           cd packages/twenty-front
-          yarn nx chromatic:ci
+          npx nx chromatic:ci
