--- a/.github/workflows/ci-server.yaml
+++ b/.github/workflows/ci-server.yaml
@@ -36,14 +36,14 @@ jobs:
       - name: Server / Install Dependencies
         run: yarn
       - name: Server / Run linter
-        run: yarn nx lint twenty-server
+        run: npx nx lint twenty-server
       - name: Server / Run jest tests
-        run: yarn nx test:unit twenty-server
+        run: npx nx test:unit twenty-server
       - name: Server / Build
-        run: yarn nx build twenty-server
+        run: npx nx build twenty-server
       - name: Server / Write .env
         run: |
           cd packages/twenty-server
           cp .env.example .env
       - name: Worker / Run
-        run: MESSAGE_QUEUE_TYPE=sync yarn nx worker twenty-server
+        run: MESSAGE_QUEUE_TYPE=sync npx nx worker twenty-server
