--- a/.github/workflows/ci-utils.yaml
+++ b/.github/workflows/ci-utils.yaml
@@ -28,6 +28,6 @@ jobs:
       - name: Utils / Install Dependencies
         run: yarn
       - name: Utils / Run Danger.js
-        run: cd packages/twenty-utils && yarn nx danger:ci
+        run: cd packages/twenty-utils && npx nx danger:ci
         env:
           DANGER_GITHUB_API_TOKEN: ${{ github.token }}
