Make Github stars dynamic and improve database init (#5000)
I extracted the init database logic into its own file. 
You can now run it with yarn database:init.
Added database entry for GitHub stars. 

Do you want me to remove the init route or is it used for something else
?

---------

Co-authored-by: Ady Beraud <a.beraud96@gmail.com>
Co-authored-by: Félix Malfait <felix.malfait@gmail.com>

--- a/packages/twenty-website/package.json
+++ b/packages/twenty-website/package.json
@@ -8,6 +8,8 @@
     "build": "npx next build",
     "start": "npx next start",
     "lint": "npx next lint",
+    "github:sync": "npx tsx src/github-sync/github-sync.ts",
+    "database:migrate": "npx tsx src/database/migrate-database.ts",
     "database:generate:pg": "npx drizzle-kit generate:pg --config=src/database/postgres/drizzle-posgres.config.ts",
     "database:generate:sqlite": "npx drizzle-kit generate:sqlite --config=src/database/sqlite/drizzle-sqlite.config.ts"
   },
