--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@types/lodash.pick": "^4.3.7",
     "@types/mailparser": "^3.4.4",
     "@types/nodemailer": "^6.4.14",
+    "@types/passport-microsoft": "^1.0.3",
     "add": "^2.0.6",
     "afterframe": "^1.0.2",
     "apollo-server-express": "^3.12.0",
@@ -136,6 +137,7 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "passport-microsoft": "^2.0.0",
     "patch-package": "^8.0.0",
     "pg": "^8.11.3",
     "pg-boss": "^9.0.3",
