--- a/packages/twenty-website/package.json
+++ b/packages/twenty-website/package.json
@@ -10,8 +10,7 @@
     "lint": "npx next lint",
     "github:sync": "npx tsx src/github-sync/github-sync.ts",
     "database:migrate": "npx tsx src/database/migrate-database.ts",
-    "database:generate:pg": "npx drizzle-kit generate:pg --config=src/database/postgres/drizzle-posgres.config.ts",
-    "database:generate:sqlite": "npx drizzle-kit generate:sqlite --config=src/database/sqlite/drizzle-sqlite.config.ts"
+    "database:generate:pg": "npx drizzle-kit generate:pg --config=src/database/drizzle-posgres.config.ts"
   },
   "dependencies": {
     "postgres": "^3.4.3"
