--- a/packages/twenty-server/.env.example
+++ b/packages/twenty-server/.env.example
@@ -71,3 +71,4 @@ SIGN_IN_PREFILLED=true
 # API_RATE_LIMITING_LIMIT=
 # MUTATION_MAXIMUM_RECORD_AFFECTED=100
 # CHROME_EXTENSION_REDIRECT_URL=https://bggmipldbceihilonnbpgoeclgbkblkp.chromiumapp.org
+# PG_SSL_ALLOW_SELF_SIGNED=true
