--- a/packages/twenty-server/project.json
+++ b/packages/twenty-server/project.json
@@ -2,6 +2,7 @@
   "name": "twenty-server",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
+  "tags": ["scope:backend"],
   "targets": {
     "build": {
       "executor": "nx:run-commands",
@@ -33,6 +34,16 @@
       "options": {
         "cwd": "packages/twenty-server",
         "command": "nx start --debug"
+      }
+    },
+    "reset:env": {
+      "executor": "nx:run-commands",
+      "inputs": ["{projectRoot}/.env.example"],
+      "outputs": ["{projectRoot}/.env"],
+      "cache": true,
+      "options": {
+        "cwd": "{projectRoot}",
+        "command": "cp .env.example .env"
       }
     },
     "command": {
@@ -81,42 +92,16 @@
       }
     },
     "lint": {
-      "executor": "@nx/eslint:lint",
       "options": {
-        "eslintConfig": "{projectRoot}/.eslintrc.cjs",
-        "ignorePath": "{workspaceRoot}/.gitignore",
         "lintFilePatterns": ["{projectRoot}/src/**/*.{ts,json}"]
       },
       "configurations": {
         "ci": { "lintFilePatterns": ["{projectRoot}/**/*.{ts,json}"] },
-        "fix": { "fix": true }
+        "fix": {}
       }
     },
-    "test:unit": {
-      "executor": "nx:run-commands",
-      "dependsOn": ["build"],
-      "options": {
-        "cwd": "packages/twenty-server",
-        "command": "jest"
-      }
-    },
-    "test:unit:watch": {
-      "executor": "nx:run-commands",
-      "dependsOn": ["build"],
-      "options": {
-        "cwd": "packages/twenty-server",
-        "command": "jest --watch"
-      }
-    },
-    "test:unit:coverage": {
-      "executor": "nx:run-commands",
-      "dependsOn": ["build"],
-      "options": {
-        "cwd": "packages/twenty-server",
-        "command": "jest --coverage"
-      }
-    },
-    "test:unit:debug": {
+    "test": {},
+    "test:debug": {
       "executor": "nx:run-commands",
       "options": {
         "cwd": "packages/twenty-server",
