--- a/packages/twenty-front/project.json
+++ b/packages/twenty-front/project.json
@@ -95,6 +95,17 @@
         }
       }
     },
-    "chromatic": {}
+    "chromatic": {
+      "executor": "nx:run-commands",
+      "options": {
+        "cwd": "{projectRoot}",
+        "command": "cross-var chromatic --project-token=$CHROMATIC_PROJECT_TOKEN --build-script-name=storybook:build"
+      },
+      "configurations": {
+        "ci": {
+          "args": ["--exit-zero-on-changes"]
+        }
+      }
+    }
   }
 }
