Re-add chromatic CI to github workflow

--- a/.github/workflows/ci-chromatic.yaml
+++ b/.github/workflows/ci-chromatic.yaml
@@ -36,5 +36,4 @@ jobs:
           echo "REACT_APP_SERVER_BASE_URL: $REACT_APP_SERVER_BASE_URL" >> .env
       - name: Publish to Chromatic
         run: |
-          cd packages/twenty-front
-          npx nx chromatic:ci
+          npx nx run twenty-front:chromatic:ci
